--- a/app/views/signin.hbs
+++ b/app/views/signin.hbs
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <a href='https://www.linkedin.com/oauth/v2/authorization?response_type=code&client_id=77ii2o706eetms&redirect_uri=http://localhost:5000/api/auth/linkedin/callback&state=987654321&scope=r_emailaddress'>OAUTH</a>
     <form id="signin" name="signin" method="post" action="signin">
         <label for="email">Email Address</label>
         <input class="text" name="email" type="text" />
